<resources>
    <string name="app_name"         >android_tip_calculator</string>
    <string name="app_title"        >Tip Calculator</string>
    <string name="_check_amount"    >0</string>
    <string name="check_amount"     >Check Amount</string>
    <string name="_number_of_people">0</string>
    <string name="number_of_people" >People</string>
    <string name="_tip_percentage"  >15</string>
    <string name="tip_percentage"   >Tip Percentage %</string>
    <string name="calculate_button" >Calculate</string>
    <string name="_total_bill"      >0</string>
    <string name="total_bill"       >Total Bill</string>
    <string name="_total_per_person">0</string>
    <string name="total_per_person" >Total Per Person</string>
    <string name="_total_tip"       >0</string>
    <string name="total_tip"        >Total Tip</string>
    <string name="_tip_per_person"  >0</string>
    <string name="tip_per_person"   >Tip Per Person</string>
    <string name="dollar_formatter" >$ %1$s</string>
    <string name="google"           >Google</string>
    <string name="call"             >Call</string>
    <string name="maps"             >Maps</string>
    <string name="search"           >Search</string>
</resources>